[package]
name          = "log_filter_parse"
version       = "0.1.0"
edition       = "2018"

authors       = ["museun <museun@outlook.com>"]
repository    = "https://github.com/museun/log_filter_parse"
documentation = "https://docs.rs/log_filter_parse"

license       = "0BSD"
readme        = "README.md"

keywords      = ["log", "logging", "logger"]
categories    = ["development-tools::debugging"]

[dependencies]
log = "0.4"
